// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@body with a scope and a route with \`.dump()\` 1`] = `
User {
  "email": "test@example.com",
  "password": "asdfsadf",
  "username": "testtest",
}
`;

exports[`@body with a scope and a route with \`.dump()\` 2`] = `
User {
  "email": "test@example.com",
  "password": "asdfsadf",
}
`;
